# TP1_CVelazquez_38091823

./: CMakeLists.txt  makefile
cliente/: main.c
servidor/: auth.c  fileserv.c  mensaje.h  server.c
